--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     image: mysql:5.7
     restart: always
     environment:
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'password'
       MYSQL_DATABASE: 'events'
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
